[project]
name = "agentmint"
version = "0.1.0"
description = "Cryptographic proof that a human approved an AI agent action"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aniketh Maddipati"}]
keywords = ["ai", "agents", "authorization", "cryptography", "ed25519"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["pynacl>=1.5.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/aniketh-maddipati/agentmint-python"
Repository = "https://github.com/aniketh-maddipati/agentmint-python"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentmint*"]
