[project]
name = "agentmint"
version = "0.1.0"
description = "Runtime enforcement library for AI agent tool calls"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aniketh Maddipati"}]
keywords = ["ai", "agents", "authorization", "cryptography", "ed25519"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pynacl>=1.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.85.0"]
dev = ["pytest>=7.0.0", "libcst>=1.0"]
cli = [
    "click>=8.0",
    "libcst>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]
demos = [
    "elevenlabs>=2.38.0",
    "rich>=14.3.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
agentmint = "agentmint.cli.main:main"

[project.urls]
Homepage = "https://github.com/aniketh-maddipati/agentmint-python"
Repository = "https://github.com/aniketh-maddipati/agentmint-python"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentmint*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
